# daily-tool-discovery

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  run.py
config/: profile.example.toml  sources.example.toml
config/profiles/: web-frontend.example.toml
daily-tool-discovery/: SKILL.md
daily-tool-discovery/references/: trending-sources.md  troubleshooting.md
daily-tool-discovery/scripts/: run.py
daily-tool-discovery/scripts/daily_tool_discovery/: bootstrap.py  briefing.py  cli.py  config.py  curated_sources.py  feedback.py  github_client.py  jsonl_store.py  lists.py  models.py  profile.py  ranking.py  trending.py  trust.py
daily-tool-discovery/templates/: profile.example.toml
docs/specs/: 2026-06-05-daily-tool-discovery-briefing-design.md
docs/superpowers/plans/: 2026-06-05-daily-tool-discovery-mvp.md
hermes-skills/daily-tool-discovery/: SKILL.md
prompts/: hermes-review.md
scripts/: install-hermes-server.sh
seeds/: manual.example.jsonl
src/daily_tool_discovery/: bootstrap.py  briefing.py  cli.py  curated_sources.py  feedback.py  github_client.py  history.py  jsonl_store.py  models.py  profile.py  ranking.py  seeds.py  trust.py
tests/: test_bootstrap.py  test_briefing.py  test_browse.py  test_cli.py  test_config.py  test_curated_sources.py  test_docs.py  test_feedback.py  test_github_client.py  test_history.py  test_jsonl_store.py  test_lists.py  test_models.py  test_package.py  test_profile.py  test_ranking.py  test_run.py  test_seeds.py  test_trending.py  test_trust.py
