[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-tool-discovery"
version = "0.1.0"
description = "Trust-first daily tool-discovery briefing with a configurable taste profile"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
daily-tool-discovery = "daily_tool_discovery.cli:main"

[tool.setuptools.packages.find]
where = ["daily-tool-discovery/scripts"]

[tool.pytest.ini_options]
pythonpath = ["daily-tool-discovery/scripts"]
testpaths = ["tests"]
